[package]
name = "MiddleReceiption"
version = "0.1.0"
authors = ["nasa181 <tanawat181@hotmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
